# semantic-splitting-tutorial

./: README.md  pyproject.toml
scripts/: 1_semantic_splitting.ipynb
