[tool.poetry]
name = "semantic_splitting"
version = "0.1.0"
description = ""
authors = ["jimzer <jimi.vaubien@protonmail.com>"]
readme = "README.md"
packages = [{ include = "semantic_splitting", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.4"
litellm = "^1.35.38"
numpy = "^1.26.4"
wikipedia = "^1.4.0"
matplotlib = "^3.8.4"
scipy = "^1.13.0"
wikipedia-sections = "^2.0.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.2"

[tool.mypy]
disable_error_code = ["empty-body"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
